# shl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
asm/aarch64/: linux_syscall.S  linux_thread.S
asm/x86_64/: linux_syscall.S  linux_thread.S
cmake/: ASM.cmake
demos/: CMakeLists.txt
demos/filesystem_watcher_demo/: CMakeLists.txt
demos/filesystem_watcher_demo/src/: main.cpp
src/: dprint.hpp  enum_flag.hpp  file_stream.cpp  file_stream.hpp  filesystem.cpp  filesystem.hpp  memory_stream.cpp  memory_stream.hpp  number_types.hpp  parse.hpp  parse_object.hpp  print.hpp  string.hpp
src/shl/: allocator.cpp  allocator.hpp  allocator_arena.cpp  allocator_arena.hpp  architecture.hpp  arena_allocator.cpp  arena_allocator.hpp  array.hpp  array2d.hpp  assert.cpp  assert.hpp  async_io.cpp  async_io.hpp  at_exit.cpp  at_exit.hpp  bits.hpp  char_types.hpp  chunk_array.hpp  compare.hpp  compiler.hpp  debug.cpp  debug.hpp  defer.hpp  dprint.hpp  endian.hpp  enum_flag.hpp  environment.cpp  environment.hpp  error.cpp  error.hpp  exit.cpp  exit.hpp  file_stream.cpp  file_stream.hpp  filesystem.cpp  filesystem.hpp  filesystem_watcher.cpp  filesystem_watcher.hpp  fixed_array.hpp  format.cpp  (+50 more)
src/shl/impl/: async_common.hpp  compat_stdlib.hpp  compat_stdlib_end.hpp  for_array.hpp  thread_common.hpp
src/shl/impl/linux/: at.hpp  error_codes.hpp  exit.cpp  exit.hpp  fs.cpp  fs.hpp  futex.cpp  futex.hpp  inotify.cpp  inotify.hpp  io.cpp  io.hpp  io_uring.cpp  io_uring.hpp  io_uring_context.cpp  io_uring_context.hpp  memory.cpp  memory.hpp  poll.cpp  poll.hpp  process.cpp  process.hpp  select.cpp  select.hpp  signal.cpp  signal.hpp  statx.cpp  statx.hpp  syscalls.hpp  sysinfo.cpp  sysinfo.hpp  thread.cpp  thread.hpp
src/shl/impl/linux/aarch64/: syscalls.h
src/shl/impl/linux/x86/: syscalls.h
src/shl/impl/linux/x86_64/: syscalls.h
src/shl/impl/windows/: async_context.cpp  async_context.hpp
tests/: _test_file_util.hpp  allocator_tests.cpp  arena_allocator_tests.cpp  array2d_tests.cpp  array_tests.cpp  assert_tests.cpp  async_tests.cpp  bits_tests.cpp  chunk_array_tests.cpp  compare_tests.cpp  debug_tests.cpp  defer_tests.cpp  endian_tests.cpp  environment_tests.cpp  error_test.cpp  file_stream_tests.cpp  file_stream_text_data.txt  filesystem_tests.cpp  fixed_array_tests.cpp  format_tests.cpp  hash_table_tests.cpp  hash_tests.cpp  linked_list_tests.cpp  linux_syscall_test.cpp  linux_thread_test.cpp  macro_tests.cpp  math_tests.cpp  memory_stream_tests.cpp  memory_tests.cpp  murmur_hash_tests.cpp  parse_object_tests.cpp  parse_tests.cpp  pipe_tests.cpp  print_tests.cpp  process_tests.cpp  program_context_tests.cpp  random_tests.cpp  ring_buffer_tests.cpp  scratch_buffer_tests.cpp  set_tests.cpp  (+8 more)
